--- a/responsive-web-design/build-a-tribute-page/index.html
+++ b/responsive-web-design/build-a-tribute-page/index.html
@@ -52,9 +52,9 @@
         }
   </style>
 </head>
-<body id="main">
+<body>
   <script src="testable-projects-fcc-v1-bundle.js"></script> <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
-  <main>
+  <main id="main">
     <header>
       <h1 id="title">Jake the Dog</h1>
     </header>
