--- a/responsive-web-design/build-a-technical-documentation-page/index.html
+++ b/responsive-web-design/build-a-technical-documentation-page/index.html
@@ -86,6 +86,18 @@
             width: fit-content;
         }
 
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+            margin-bottom: 1em;
+        }
+
+        th, td {
+            border: 1px solid #c4c6c9;
+            padding: 6px 13px;
+            text-align: left;
+        }
+        
         @media (min-width: 800px) {
             body {
                 padding-left: 300px;
