Add Reference to source material from gRPC GitHub Repository

--- a/responsive-web-design/build-a-technical-documentation-page/index.html
+++ b/responsive-web-design/build-a-technical-documentation-page/index.html
@@ -70,7 +70,7 @@
         }
 
         main {
-            margin: 8px;
+            margin: 8px 8px 24px 8px;
         }
 
         code {
@@ -131,6 +131,7 @@
             <li><a class="nav-link" href="#Performance">Performance</a></li>
             <li><a class="nav-link" href="#Concepts">Concepts</a></li>
             <li><a class="nav-link" href="#About_This_Repository">About This Repository</a></li>
+            <li><a class="nav-link" href="#Reference">Reference</a></li>
         </ul>
     </nav>
     <main id="main-doc">
@@ -380,6 +381,12 @@ GRPC_VERBOSITY=debug GRPC_TRACE=tcp,http,api ./helloworld_application_using_grpc
                 </tbody>
             </table>
         </section>
+        <section class="main-section" id="Reference">
+                <header>Reference</header>
+                <p>
+                    All the documentation in this page is taken from the <a href="https://github.com/grpc/grpc" target="_blank">gRPC GitHub Repository</a>.
+                </p>
+                </section>
     </main>
 </body>
 
