--- a/responsive-web-design/build-a-technical-documentation-page/index.html
+++ b/responsive-web-design/build-a-technical-documentation-page/index.html
@@ -39,7 +39,7 @@
             background-color: #EEE;
         }
 
-        nav > header {
+        nav>header {
             font-size: 30px;
             line-height: 30px;
             padding: 10px 0px 10px 50px;
@@ -92,12 +92,13 @@
             margin-bottom: 1em;
         }
 
-        th, td {
+        th,
+        td {
             border: 1px solid #c4c6c9;
             padding: 6px 13px;
             text-align: left;
         }
-        
+
         @media (min-width: 800px) {
             body {
                 padding-left: 300px;
@@ -382,11 +383,12 @@ GRPC_VERBOSITY=debug GRPC_TRACE=tcp,http,api ./helloworld_application_using_grpc
             </table>
         </section>
         <section class="main-section" id="Reference">
-                <header>Reference</header>
-                <p>
-                    All the documentation in this page is taken from the <a href="https://github.com/grpc/grpc" target="_blank">gRPC GitHub Repository</a>.
-                </p>
-                </section>
+            <header>Reference</header>
+            <p>
+                All the documentation in this page is taken from the <a href="https://github.com/grpc/grpc" target="_blank">gRPC
+                    GitHub Repository</a>.
+            </p>
+        </section>
     </main>
 </body>
 
