--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -33,11 +33,17 @@
         }
 
         main {
-            margin: 0 15px;
+            margin: 0;
+        }
+
+        main > section {
+            padding-bottom: 16px;
         }
 
         p {
             text-align: justify;
+            margin: 16px auto;
+            max-width: 1000px;
         }
 
         h1{font-size: 3em;}
@@ -203,6 +209,7 @@
         $(function() {
             on_resize();
             $(window).resize(on_resize);
+            $(window).resize(on_scroll);
 
             on_scroll();
             $(window).on("scroll", on_scroll);
@@ -232,7 +239,7 @@
                 var section = $(sectionLink.attr('href'));
 
                 // subtract the navbar height from the top of the section
-                if(section.offset().top <= currentPos && currentPos < (section.offset().top + section.height())) {
+                if(Math.round(section.offset().top) <= currentPos && currentPos < Math.round(section.offset().top + section.outerHeight())) {
                     //$('.nav li').removeClass('active');
                     sectionLink.addClass('active');
                 } else {
