--- a/responsive-web-design/build-a-tribute-page/test.html
+++ b/responsive-web-design/build-a-tribute-page/test.html
@@ -53,6 +53,7 @@
   </style>
 </head>
 <body>
+  <script src="testable-projects-fcc-v1-bundle.js"></script>
   <main id="main">
     <header>
       <h1 id="title">Jake the Dog</h1>
