--- a/responsive-web-design/build-a-technical-documentation-page/test.html
+++ b/responsive-web-design/build-a-technical-documentation-page/test.html
@@ -5,123 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gRPC</title>
+    <link rel="stylesheet" href="technical-documentation-page.css">
 </head>
 
 <body>
     <script src="../testable-projects-fcc-v1-bundle.js"></script>
-    <style>
-        html,
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        a {
-            color: #0366d6;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        header {
-            font-size: 1.5em;
-            line-height: 1.5em;
-            font-weight: bold;
-            margin-block-start: 0.5em;
-            margin-block-end: 0.5em;
-        }
-
-        nav {
-            border-bottom: 2px solid #666;
-            background-color: #EEE;
-        }
-
-        nav>header {
-            font-size: 30px;
-            line-height: 30px;
-            padding: 10px 0px 10px 50px;
-            margin: 0;
-            text-align: left;
-            background-color: #FFF;
-        }
-
-        nav>ul,
-        nav>ul>li {
-            margin: 0;
-            padding: 0;
-            display: block;
-        }
-
-        nav>ul>li>a {
-            display: block;
-            text-align: left;
-            padding: 4px 4px 4px 12px;
-            color: black;
-            border-top: 1px solid #666;
-        }
-
-        nav>ul>li>a:hover {
-            background-color: #AAA;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        main {
-            margin: 8px 8px 24px 8px;
-        }
-
-        code {
-            background-color: rgba(27, 31, 35, .08);
-            font-size: .9em;
-            border-radius: 3px;
-            padding: .2em .4em;
-        }
-
-        pre code {
-            display: block;
-            border: 1px solid rgba(27, 31, 35, .1);
-            width: fit-content;
-        }
-
-        table {
-            border-collapse: collapse;
-            border-spacing: 0;
-            margin-bottom: 1em;
-        }
-
-        th,
-        td {
-            border: 1px solid #c4c6c9;
-            padding: 6px 13px;
-            text-align: left;
-        }
-
-        @media (min-width: 800px) {
-            body {
-                padding-left: 300px;
-            }
-
-            nav {
-                position: fixed;
-                width: 300px;
-                height: 100vh;
-                box-sizing: border-box;
-                top: 0;
-                left: 0;
-                border-right: 2px solid #666;
-                border-bottom: 0;
-            }
-
-            nav>ul {
-                height: calc(100vh - 50px);
-                overflow-y: auto;
-            }
-
-        }
-    </style>
     <nav id="navbar">
         <header>gRPC</header>
         <ul>
