Add basic content for portfolio projects

--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -400,13 +400,33 @@
 
     <section id="projects">
         <h1>Portfolio</h1>
-        <div class="project-tile">
-            <a class="project-title" href="../build-a-tribute-page/index.html">Tribute Page</a>
-        </div>
-        <div class="project-tile">
-            <a class="project-title" href="../build-a-tribute-page/index.html">Tribute Page</a>
-        </div>
 
+        <div class="project-tile">
+            <a class="project-title" href="../build-a-tribute-page/test.html">
+                <img src="screenshots\build-a-tribute-page.png">
+                Jake the Dog Tribute Page
+            </a>
+        </div>
+        <div class="project-tile">
+            <a class="project-title" href="../build-a-survey-form/test.html">
+                <img src="screenshots\build-a-survey-form.png">
+                Beatles Survey Form
+            </a>
+        </div>
+        <div class="project-tile">
+            <a class="project-title" href="../build-a-technical-documentation-page/test.html">
+                <img src="screenshots\build-a-technical-documentation-page.png">
+                gRPC Technical Documentation Page
+            </a>
+        </div>
+        <div class="project-tile">
+            <a class="project-title" href="../build-a-product-landing-page/test.html">
+                <img src="screenshots\build-a-product-landing-page.png">
+                Water Product Landing Page
+            </a>
+        </div>
+        
+                        
     </section>
     <section id="contact">
         <h1>Contact Me</h1>
