Add photo of me

--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -34,6 +34,7 @@
 
     <section id="about-me">
         <h1>About Me</h1>
+        <img src="images/me.jpg" alt="Photo of Andrew" id="self-photo">
         <p id="brand">I create inventive software applications to help solve challenging problems through continual learning,
             thorough contemplation, and diligent effort.</p>
         <p>I have a strong background in complex distributed systems, optimizing performance over degraded networks, and the integration of
