--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -110,7 +110,7 @@
                 <div class="project-tile">
                     <img src="images/screenshots/thumbnails/build-a-tribute-page.png" class="project-picture">
                     <div class="project-info">
-                        <h3>Jake the Dog Tribute Page</h3>
+                        <h3 class="project-title">Jake the Dog Tribute Page</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a tribute page.</p>
                         <div class="project-links">
@@ -129,7 +129,7 @@
                 <div class="project-tile">
                     <img src="images/screenshots/thumbnails/build-a-survey-form.png" class="project-picture">
                     <div class="project-info">
-                        <h3>Beatles Survey Form</h3>
+                        <h3 class="project-title">Beatles Survey Form</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a survey form.</p>
                         <div class="project-links">
@@ -148,7 +148,7 @@
                 <div class="project-tile">
                     <img src="images/screenshots/thumbnails/build-a-technical-documentation-page.png" class="project-picture">
                     <div class="project-info">
-                        <h3>gRPC Technical Documentation Page</h3>
+                        <h3 class="project-title">gRPC Technical Documentation Page</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a a technical documentation page.</p>
                         <div class="project-links">
@@ -167,7 +167,7 @@
                 <div class="project-tile">
                     <img src="images/screenshots/thumbnails/build-a-product-landing-page.png" class="project-picture">
                     <div class="project-info">
-                        <h3>Water Product Landing Page</h3>
+                        <h3 class="project-title">Water Product Landing Page</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a product landing page.</p>
                         <div class="project-links">
