--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -18,9 +18,9 @@
         <nav id="nav">
             <ul>
                 <li><a href="#welcome-section">Home</a></li>
-                <li><a href="#about-me">About</a></li>
-                <li><a href="#projects">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about-section">About</a></li>
+                <li><a href="#projects-section">Portfolio</a></li>
+                <li><a href="#contact-section">Contact</a></li>
             </ul>
         </nav>
     </header>
