Add references to JavaScript to projects

--- a/responsive-web-design/build-a-personal-portfolio-webpage/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/index.html
@@ -130,7 +130,7 @@
                     <img src="images/screenshots/thumbnails/build-a-survey-form.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">Beatles Survey Form</h3>
-                        <h4>HTML5, CSS3</h4>
+                        <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a survey form.</p>
                         <div class="project-links">
                             <a href="../build-a-survey-form/test.html" target="_blank">
@@ -168,7 +168,7 @@
                     <img src="images/screenshots/thumbnails/build-a-product-landing-page.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">Water Product Landing Page</h3>
-                        <h4>HTML5, CSS3</h4>
+                        <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a product landing page.</p>
                         <div class="project-links">
                             <a href="../build-a-product-landing-page/test.html" target="_blank">
