Remove all test presence from index files

--- a/responsive-web-design/build-a-personal-portfolio-webpage/test.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/test.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>asteffey's Portfolio</title>
     <link rel="stylesheet" href="personal-portfolio-webpage.css">
+    <style>
+        :root {
+            --top-name-width: 200px;
+        }
+    </style>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="personal-portfolio-webpage.js"></script>
 </head>
 
 <body>
+    <script src="../testable-projects-fcc-v1-bundle.js"></script>
     <header id="navbar">
         <div id="name"><a href="#welcome-section">Andrew Steffey</a></div>
         <img src="images/hamburger.svg" alt="Navigation Menu" id="nav-button">
@@ -113,7 +119,7 @@
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a tribute page.</p>
                         <div class="project-links">
-                            <a href="../build-a-tribute-page/index.html" target="_blank">
+                            <a href="../build-a-tribute-page/test.html" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -132,7 +138,7 @@
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a survey form.</p>
                         <div class="project-links">
-                            <a href="../build-a-survey-form/index.html" target="_blank">
+                            <a href="../build-a-survey-form/test.html" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -151,7 +157,7 @@
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a a technical documentation page.</p>
                         <div class="project-links">
-                            <a href="../build-a-technical-documentation-page/index.html" target="_blank">
+                            <a href="../build-a-technical-documentation-page/test.html" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -170,7 +176,7 @@
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a product landing page.</p>
                         <div class="project-links">
-                            <a href="../build-a-product-landing-page/index.html" target="_blank">
+                            <a href="../build-a-product-landing-page/test.html" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
