--- a/responsive-web-design/build-a-technical-documentation-page/test.html
+++ b/responsive-web-design/build-a-technical-documentation-page/test.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gRPC</title>
     <link rel="stylesheet" href="technical-documentation-page.css">
+    <style>
+        :root{--header-left-padding: 50px;}
+    </style>
 </head>
 
 <body>
