--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://asteffey.github.io/freecodecamp/responsive-web-design/build-a-personal-portfolio-webpage/'" />
+    <meta http-equiv="refresh" content="0; URL='https://asteffey.github.io/freecodecamp/responsive-web-design/build-a-personal-portfolio-webpage/test.html'" />
 </head>
 <body>
 
