--- a/responsive-web-design/build-a-personal-portfolio-webpage/test.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/test.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="personal-portfolio-webpage.css">
     <style>
         :root {
-            --top-name-width: 200px;
+            --top-name-width: 80vw;
+        }
+
+        @media (min-width: 250px) {
+            :root {
+                --top-name-width: 200px;
+            }
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
