--- a/responsive-web-design/build-a-tribute-page/test.html
+++ b/responsive-web-design/build-a-tribute-page/test.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jake The Dog Tribute Page</title>
   <link rel="stylesheet" href="tribute-page.css">
 </head>
