Add build-a-personal-portfolio-webpage to lerna
Fix include-fcc-tests.js

--- a/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>asteffey's Portfolio</title>
     <link rel="stylesheet" href="personal-portfolio-webpage.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="personal-portfolio-webpage.js"></script>
 </head>
 
 <body>
@@ -209,6 +207,8 @@
             </div>
         </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://asteffey.github.io/freecodecamp/js/include-fcc-tests.js"></script>
+    <script src="personal-portfolio-webpage.js"></script>
 </body>
-
 </html>
