Add build-a-technical-documentation-page to lerna

--- a/responsive-web-design/build-a-technical-documentation-page/app/index.html
+++ b/responsive-web-design/build-a-technical-documentation-page/app/index.html
@@ -277,6 +277,8 @@ GRPC_VERBOSITY=debug GRPC_TRACE=tcp,http,api ./helloworld_application_using_grpc
             </p>
         </section>
     </main>
+    <script src="technical-documentation-page.js"></script>
+    <script src="https://asteffey.github.io/freecodecamp/js/include-fcc-tests.js"></script>
 </body>
 
 </html>
