Add build-a-tribute-page to lerna

--- a/responsive-web-design/build-a-tribute-page/app/index.html
+++ b/responsive-web-design/build-a-tribute-page/app/index.html
@@ -35,5 +35,6 @@
          target="_blank">Adventure Time Wiki</a>.</p>
     </footer>
   </main>
+  <script src="https://asteffey.github.io/freecodecamp/js/include-fcc-tests.js"></script>
 </body>
 </html>
