Add fcc-test to links

--- a/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
@@ -111,7 +111,7 @@
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a tribute page.</p>
                         <div class="project-links">
-                            <a href="../build-a-tribute-page/index.html" target="_blank">
+                            <a href="../build-a-tribute-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -130,7 +130,7 @@
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a survey form.</p>
                         <div class="project-links">
-                            <a href="../build-a-survey-form/index.html" target="_blank">
+                            <a href="../build-a-survey-form/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -149,7 +149,7 @@
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a a technical documentation page.</p>
                         <div class="project-links">
-                            <a href="../build-a-technical-documentation-page/index.html" target="_blank">
+                            <a href="../build-a-technical-documentation-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
@@ -168,7 +168,7 @@
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a product landing page.</p>
                         <div class="project-links">
-                            <a href="../build-a-product-landing-page/index.html" target="_blank">
+                            <a href="../build-a-product-landing-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
