--- a/responsive-web-design/build-a-tribute-page/app/index.html
+++ b/responsive-web-design/build-a-tribute-page/app/index.html
@@ -3,36 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jake The Dog Tribute Page</title>
+  <title>Tim Berners-Lee Tribute Page</title>
   <link rel="stylesheet" href="tribute-page.css">
 </head>
 <body>
   <main id="main">
     <header>
-      <h1 id="title">Jake the Dog</h1>
+      <h1 id="title">Tim Berners-Lee</h1>
     </header>
     <div id="img-div">
       <figure id="img-figure">
-        <img alt="Jake the Dog"
+        <img alt="Tim Berners-Lee"
                 id="image"
-                src="https://i.stack.imgur.com/xHWG8.jpg">
+                src="images/tim_berners_lee.jpg">
         <figcaption id="img-caption">
-          <strong>Jake the Dog</strong> is the deuteragonist of <em>Adventure Time</em>.
+          <strong>Sir Timothy John Berners-Lee</strong> is an English engineer and computer scientist best know as the <em>inventor of the World Wide Web</em>.
         </figcaption>
       </figure>
     </div>
     <section id="tribute-info">
-      <p>Jake (full title: Jake the Dog), the deuteragonist of Adventure Time, is a dog/shape-shifter hybrid, referred to by others as a "magical dog", and Finn's constant companion, best friend, and brother. Jake has a unique set of abilities
-      called Stretchy Powers that allow him to manipulate the shape and size of his body, coming in handy on innumerable occasions throughout his and Finn's adventures. Jake was 28 years old at his debut in "magical dog years," and ages throughout
-      the series, though he rarely acts mature. It is inferred that magical dogs have a lifespan similar to Humans, as demonstrated by an aged Jake in "Dungeon Train". Then again, how exactly magical dog years correlate to human years remains to be
-      seen, although both Finn and Jake were shown to be babies around the same time, showing that they age slightly faster, however, his age as of "Joshua and Margaret Investigations" suggests that it slows down to the rate of human's aging at some
-      point. Jake is currently in a relationship with Lady Rainicorn, and, by "Jake the Dad," they are the parents of five Rainicorn-dog hybrids.</p>
+      <p>
+        Berners-Lee is a Professorial Fellow of Computer Science at the University of Oxford and a professor at the
+        Massachusetts Institute of Technology (MIT). Berners-Lee proposed an information management system on 12 March
+        1989, then implemented the first successful communication between a Hypertext Transfer Protocol (HTTP) client
+        and server via the internet in mid-November.
+      </p>
+      <p>
+        Berners-Lee is the director of the World Wide Web Consortium (W3C) which oversees the continued development of
+        the Web. He is also the founder of the World Wide Web Foundation and is a senior researcher and holder of the
+        3Com founders chair at the MIT Computer Science and Artificial Intelligence Laboratory (CSAIL). He is a
+        director of the Web Science Research Initiative (WSRI) and a member of the advisory board of the MIT Center
+        for Collective Intelligence. In 2011, he was named as a member of the board of trustees of the Ford
+        Foundation. He is a founder and president of the Open Data Institute and is currently an advisor at social
+        network MeWe.
+      </p>
+      <p>
+        In 2004, Berners-Lee was knighted by Queen Elizabeth II for his pioneering work. In April 2009, he was
+        elected a Foreign Associate of the National Academy of Sciences. He was named in Time magazine's list of
+        the 100 Most Important People of the 20th century and has received a number of other accolades for his
+        invention. He was honoured as the "Inventor of the World Wide Web" during the 2012 Summer Olympics opening
+        ceremony in which he appeared working with a vintage NeXT Computer at the London Olympic Stadium. He tweeted
+        "This is for everyone" which appeared in LCD lights attached to the chairs of the audience. He received
+        the 2016 Turing Award "for inventing the World Wide Web, the first web browser, and the fundamental protocols
+        and algorithms allowing the Web to scale".
+      </p>
     </section>
     <footer>
-      <p>For more information, please take a look at <a href="http://adventuretime.wikia.com/wiki/Jake"
-         target="_blank">Jake's entry</a> on the <a href="http://adventuretime.wikia.com/"
-         id="tribute-link"
-         target="_blank">Adventure Time Wiki</a>.</p>
+      <p>For more information, please take a look at <a href="https://www.w3.org/People/Berners-Lee/" id="tribute-link"
+         target="_blank">Tim Berners-Lee's biography at w3.org</a></p>
     </footer>
   </main>
   <script src="https://asteffey.github.io/freecodecamp/js/include-fcc-tests.js"></script>
