--- a/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
@@ -34,17 +34,19 @@
         <section id="about-section">
             <h1>About Me</h1>
             <img src="images/me.jpg" alt="Photo of Andrew" id="self-photo">
-            <p id="brand">I create inventive software applications to help solve challenging problems through continual
-                learning,
-                thorough contemplation, and diligent effort.</p>
-            <p>I have a strong background in complex distributed systems, optimizing performance over degraded
-                networks, and the integration of
-                heterogeneous systems. I am looking for new opportunities to acquire knowledge, gain new skills, and
-                create
-                software which makes a positive impact on the world.</p>
+            <p id="brand">I create inventive software solutions to solve challenging problems through continual
+                learning, thorough contemplation, and diligent effort.</p>
+            <p>I love designing creative software solutions, automating the build and release process to the greatest
+                extent possible, and crafting clean, well tested, and efficient code. I also have a background in wide
+                range of roles involving complex distributed systems, network performance analysis, heterogeneous system
+                integration, direct customer interaction, and concept development which helps me appreciate the bigger
+                picture and bring non-traditional design considerations to the table.</p>
             <h2>Skills</h2>
-            <!--Criteria: for every technology listed, I need a project in my portfolio which uses it.-->
             <div id="skills">
+                <div class="skill">
+                    <img src="images/devicon/java-original.svg" alt="Java">
+                    Java
+                </div>
                 <div class="skill">
                     <img src="images/devicon/html5-original.svg" alt="HTML5">
                     HTML5
@@ -57,13 +59,17 @@
                     <img src="images/devicon/javascript-original.svg" alt="JavaScript">
                     JavaScript
                 </div>
-                <!-- <div class="skill">
-                <img src="images/devicon/react-original.svg" alt="React">
-                React
-            </div> -->
+                <div class="skill">
+                    <img src="images/devicon/react-original.svg" alt="React">
+                    React
+                </div>
                 <div class="skill">
                     <img src="images/devicon/jquery-original.svg" alt="JQuery">
                     JQuery
+                </div>
+                <div class="skill">
+                    <img src="images/devicon/d3js-original.svg" alt="D3">
+                    D3.js
                 </div>
                 <div class="skill">
                     <img src="images/devicon/nodejs-original.svg" alt="Node.js">
@@ -78,26 +84,33 @@
                     C++
                 </div>
                 <div class="skill">
-                    <img src="images/grpc.svg" alt="gRPC">
-                    gRPC
+                    <img src="images/devicon/docker-original.svg" alt="Docker">
+                    Docker
                 </div>
-                <!-- <div class="skill">
-                <img src="images/devicon/docker-original.svg" alt="Docker">
-                Docker
-            </div> -->
                 <div class="skill">
                     <img src="images/devicon/mysql-original.svg" alt="MySQL">
                     MySQL
                 </div>
-                <!-- <div class="skill">
-                <img src="images/devicon/mongodb-original.svg" alt="HTML5">
-                MongoDB
-            </div> -->
-                <!-- <div class="skill">
-                <img src="images/devicon/travis-plain.svg" alt="Travis CI">
-                Travis CI
-            </div> -->
-
+                <div class="skill">
+                    <img src="images/devicon/mongodb-original.svg" alt="HTML5">
+                    MongoDB
+                </div>
+                <div class="skill">
+                    <img src="images/devicon/gradle-plain.svg" alt="Gradle">
+                    Gradle
+                </div>
+                <div class="skill">
+                    <img src="images/devicon/maven.svg" alt="Maven">
+                    Maven
+                </div>
+                <div class="skill">
+                    <img src="images/devicon/travis-plain.svg" alt="Travis CI">
+                    Travis CI
+                </div>
+                <div class="skill">
+                    <img src="images/devicon/gitlab-original.svg" alt="Gitlab">
+                    Gitlab
+                </div>
             </div>
         </section>
 
@@ -192,7 +205,7 @@
                         GitHub
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/andrew-steffey-96373b4/" class="contact-link" target="_blank">
+                <a href="https://www.linkedin.com/in/asteffey/" class="contact-link" target="_blank">
                     <div>
                         <img src="images/site-icons/linkedin.svg" alt="Andrew's LinkedIn Profile">
                         LinkedIn
