refactor: prepare to split apart monorepo"
Change "build-a" and "visualize-data-with-a-" prefixes to just "fcc-"
to denote new repo naming scheme.

--- a/responsive-web-design/build-a-tribute-page/app/index.html
+++ b/responsive-web-design/build-a-tribute-page/app/index.html
@@ -15,7 +15,7 @@
       <figure id="img-figure">
         <img alt="Tim Berners-Lee"
                 id="image"
-                src="https://asteffey.github.io/freecodecamp/build-a-tribute-page/images/tim_berners_lee.jpg">
+                src="images/tim_berners_lee.jpg">
         <figcaption id="img-caption">
           <strong>Sir Timothy John Berners-Lee</strong> is an English engineer and computer scientist best know as the <em>inventor of the World Wide Web</em>.
         </figcaption>
