--- a/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
+++ b/responsive-web-design/build-a-personal-portfolio-webpage/app/index.html
@@ -118,17 +118,17 @@
             <h1>Portfolio</h1>
             <div id="projects">
                 <div class="project-tile">
-                    <img src="images/screenshots/thumbnails/build-a-tribute-page.png" class="project-picture">
+                    <img src="images/screenshots/thumbnails/fcc-tribute-page.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">Jake the Dog Tribute Page</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a tribute page.</p>
                         <div class="project-links">
-                            <a href="../build-a-tribute-page/index.html?fcc-test=true" target="_blank">
+                            <a href="../fcc-tribute-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
-                            <a href="https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-tribute-page"
+                            <a href="https://github.com/asteffey/fcc-tribute-page"
                                 target="_blank">
                                 <img src="images/site-icons/github.svg" alt="View source at GitHub">
                                 View Source
@@ -137,17 +137,17 @@
                     </div>
                 </div>
                 <div class="project-tile">
-                    <img src="images/screenshots/thumbnails/build-a-survey-form.png" class="project-picture">
+                    <img src="images/screenshots/thumbnails/fcc-survey-form.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">Beatles Survey Form</h3>
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a survey form.</p>
                         <div class="project-links">
-                            <a href="../build-a-survey-form/index.html?fcc-test=true" target="_blank">
+                            <a href="../fcc-survey-form/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
-                            <a href="https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-survey-form"
+                            <a href="https://github.com/asteffey/fcc-survey-form"
                                 target="_blank">
                                 <img src="images/site-icons/github.svg" alt="View source at GitHub">
                                 View Source
@@ -156,17 +156,17 @@
                     </div>
                 </div>
                 <div class="project-tile">
-                    <img src="images/screenshots/thumbnails/build-a-technical-documentation-page.png" class="project-picture">
+                    <img src="images/screenshots/thumbnails/fcc-technical-documentation-page.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">gRPC Technical Documentation Page</h3>
                         <h4>HTML5, CSS3</h4>
                         <p>A freeCodeCamp project to build a a technical documentation page.</p>
                         <div class="project-links">
-                            <a href="../build-a-technical-documentation-page/index.html?fcc-test=true" target="_blank">
+                            <a href="../fcc-technical-documentation-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
-                            <a href="https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-technical-documentation-page"
+                            <a href="https://github.com/asteffey/fcc-technical-documentation-page"
                                 target="_blank">
                                 <img src="images/site-icons/github.svg" alt="View source at GitHub">
                                 View Source
@@ -175,17 +175,17 @@
                     </div>
                 </div>
                 <div class="project-tile">
-                    <img src="images/screenshots/thumbnails/build-a-product-landing-page.png" class="project-picture">
+                    <img src="images/screenshots/thumbnails/fcc-product-landing-page.png" class="project-picture">
                     <div class="project-info">
                         <h3 class="project-title">Water Product Landing Page</h3>
                         <h4>HTML5, CSS3, JavaScript</h4>
                         <p>A freeCodeCamp project to build a product landing page.</p>
                         <div class="project-links">
-                            <a href="../build-a-product-landing-page/index.html?fcc-test=true" target="_blank">
+                            <a href="../fcc-product-landing-page/index.html?fcc-test=true" target="_blank">
                                 <img src="images/site-icons/external-link.svg" alt="Link to site">
                                 View Site
                             </a>
-                            <a href="https://github.com/asteffey/freecodecamp/tree/master/responsive-web-design/build-a-product-landing-page"
+                            <a href="https://github.com/asteffey/fcc-product-landing-page"
                                 target="_blank">
                                 <img src="images/site-icons/github.svg" alt="View source at GitHub">
                                 View Source
