feat: automate screenshots

--- a/public/index.html
+++ b/public/index.html
@@ -60,5 +60,7 @@
     </div>
   </section>
 </main>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
