revert: remove welcome section

--- a/public/index.html
+++ b/public/index.html
@@ -19,21 +19,12 @@
   <img src="images/hamburger.svg" alt="Navigation Menu" id="nav-button">
   <nav id="nav">
     <ul>
-      <li><a href="#welcome-section">Home</a></li>
-      <li><a href="#projects-section">Portfolio</a></li>
+      <li><a href="#projects-section">Projects</a></li>
       <li><a href="#contact-section">Contact</a></li>
     </ul>
   </nav>
 </header>
 <main>
-  <section id="welcome-section">
-    <div id="intro">
-      <h1>Andrew Steffey</h1>
-      <h3>lifelong learner, intense thinker, diligent creator</h3>
-      <h2>Software Engineer</h2>
-    </div>
-  </section>
-
   <section id="projects-section"></section>
 
   <section id="contact-section">
