fix: make minor adjustments for mobile views

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
           content="Web site created using create-react-app"
   />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-  <link rel="stylesheet" href="index.css"/>
+  <link rel="stylesheet" href="%PUBLIC_URL%/index.css"/>
   <title>Andrew's freeCodeCamp Projects</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <header id="navbar">
   <div id="name"><a href="#welcome-section">Andrew Steffey</a></div>
-  <img src="images/hamburger.svg" alt="Navigation Menu" id="nav-button">
+  <img src="%PUBLIC_URL%/images/hamburger.svg" alt="Navigation Menu" id="nav-button"/>
   <nav id="nav">
     <ul>
       <li><a href="#projects-section">Projects</a></li>
@@ -32,19 +32,19 @@
     <div id="profiles">
       <a href="https://github.com/asteffey" class="contact-link" id="profile-link" target="_blank">
         <div>
-          <img src="images/site-icons/github.svg" alt="asteffey's GitHub Profile">
+          <img src="images/site-icons/github.svg" alt="asteffey's GitHub Profile"/>
           GitHub
         </div>
       </a>
       <a href="https://www.linkedin.com/in/asteffey/" class="contact-link" target="_blank">
         <div>
-          <img src="images/site-icons/linkedin.svg" alt="Andrew's LinkedIn Profile">
+          <img src="images/site-icons/linkedin.svg" alt="Andrew's LinkedIn Profile"/>
           LinkedIn
         </div>
       </a>
       <a href="https://dev.to/asteffey" class="contact-link" target="_blank">
         <div>
-          <img src="images/site-icons/devto.svg" alt="asteffey's DEV Profile">
+          <img src="images/site-icons/devto.svg" alt="asteffey's DEV Profile"/>
           dev.to
         </div>
       </a>
